Update vscode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,18 @@
 {
     "files.exclude": {
-      // "packages/**/index.js": true,
-      // "packages/**/index.js.map": true,
-      // "packages/**/tests/**/*.xml": true,
-      // "node_modules": true,
-      // "packages/**/src/*.js": true,
-      // "packages/**/src/*.js.map": true,
-      // "packages/**/src/**/*.js": true,
-      // "packages/**/src/**/*.js.map": true,
-      // "packages/**/tests/**/*.js": true,
-      // "packages/**/tests/**/*.js.map": true,
-      // "packages/**/dist": true,
-      // "packages/**/node_modules": true,
-      // "dist": true
+      "packages/**/index.js": true,
+      "packages/**/index.js.map": true,
+      "packages/**/test/**/*.xml": true,
+      "node_modules": true,
+      "packages/**/src/*.js": true,
+      "packages/**/src/*.js.map": true,
+      "packages/**/src/**/*.js": true,
+      "packages/**/src/**/*.js.map": true,
+      "packages/**/test/**/*.js": true,
+      "packages/**/test/**/*.js.map": true,
+      "packages/**/dist": true,
+      "packages/**/node_modules": true,
+      "dist": true
     },
     "editor.tabSize": 2,
     "typescript.preferences.quoteStyle": "single",
