--- a/package.json
+++ b/package.json
@@ -15,26 +15,26 @@
     "clean": "lerna run clean; rm -rf node_modules",
     "clean:build": "lerna run clean:build",
     "lint": "lerna run lint",
-    "setup": "npm run clean && npm install && npm run bootstrap",
+    "setup": "npm run clean && npm ci && npm run bootstrap",
     "test": "lerna run test"
   },
   "devDependencies": {
-    "@types/jest": "29.0.1",
-    "@typescript-eslint/eslint-plugin": "5.36.2",
-    "@typescript-eslint/parser": "5.36.2",
-    "eslint": "8.23.1",
+    "@types/jest": "29.2.4",
+    "@typescript-eslint/eslint-plugin": "5.46.0",
+    "@typescript-eslint/parser": "5.46.0",
+    "eslint": "8.29.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jest": "27.0.4",
+    "eslint-plugin-jest": "27.1.6",
     "eslint-plugin-prettier": "4.2.1",
-    "jest": "29.0.3",
-    "jest-junit": "14.0.1",
-    "lerna": "5.5.1",
-    "npm-check-updates": "16.1.2",
-    "nx": "14.7.4",
-    "prettier": "2.7.1",
-    "ts-jest": "29.0.0",
-    "typescript": "4.8.3"
+    "jest": "29.3.1",
+    "jest-junit": "15.0.0",
+    "lerna": "6.1.0",
+    "npm-check-updates": "16.5.3",
+    "nx": "15.3.0",
+    "prettier": "2.8.1",
+    "ts-jest": "29.0.3",
+    "typescript": "4.9.4"
   }
 }
