Disable copilot and add dificulty to count-factors

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,5 +43,11 @@
   },
   "javascript.preferences.importModuleSpecifier": "relative",
   "typescript.preferences.importModuleSpecifier": "relative",
-  "jest.autoRun": "false"
+  "jest.autoRun": "false",
+  "github.copilot.enable": {
+    "*": false,
+    "plaintext": false,
+    "markdown": false,
+    "scminput": false
+  }
 }
